fix overflow css

--- a/src/main/Reader.scss
+++ b/src/main/Reader.scss
@@ -6,6 +6,7 @@
 
     .toolbar {
       position: sticky;
+      overflow-x: auto;
     }
   }
 }
