--- a/src/pdf-module/QA.scss
+++ b/src/pdf-module/QA.scss
@@ -17,6 +17,7 @@
     .qa-question {
       margin: 0;
       font-size: inherit;
+      font-weight: bold;
 
       input {
         width: 100%;
